--- a/public/a.html
+++ b/public/a.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>A html file</title>
-  </head>
-  <body>
-    <p>This is an HTML file being served through the /file route.</p>
-  </body>
+
+<head>
+    <title>html file</title>
+</head>
+
+<body>
+    <h1> Hi, this is a html file...</h1>
+</body>
+
 </html>
